samples/_failures_safe/1761290661_7570ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_43c22a13.c:141:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  141 | void display_entries_by
      | ^~~~
